--- a/.github/workflows/basic_action_1.yml
+++ b/.github/workflows/basic_action_1.yml
@@ -5,7 +5,7 @@ name: Basic Action 1
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  # schedule: # every 10 min
+  schedule: # every 10 min
    - cron: "*/10 * * * *"
 
   # Allows you to run this workflow manually from the Actions tab
