--- a/.github/workflows/WAU-Wait-And-Update.yml
+++ b/.github/workflows/WAU-Wait-And-Update.yml
@@ -5,8 +5,8 @@ name: WAU-Wait-And-Update 1
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  # schedule: # every 10 min
-  # - cron: "*/10 * * * *"
+  schedule: # every 10 min
+  - cron: "*/10 * * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
